# von-mises

./: .gitignore  LICENSE  Makefile  README.md  blog_post.md  install_gpu.sh  pyproject.toml  requirements-dev.txt  setup.py  test.sh  von_mises.ipynb
.devcontainer/: Dockerfile  Dockerfile.nvidia  Dockerfile.rocm  README.md  devcontainer.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  __init__.py  performance_benchmark.py  profile_gpu.py  profile_sampler.py  simple_profile.py
docs/: api.rst  benchmarks.rst  conf.py  gpu_optimization.rst  guide.rst  index.rst  jit_guide.rst  performance.rst  theory.rst
docs/_static/: custom.css
docs/examples/: index.rst  neural_network_integration.md  parallel_sampling.md  test.ipynb  usage_examples.rst
examples/: README.md  entropy_benchmark.py  entropy_example.py  jit_test.py  performance_showcase.py
figures/: README.md  generate_benchmark_plots.py  generate_distribution_plot.py  generate_entropy_plot.py  generate_scipy_comparison.py
src/jax_von_mises/: __init__.py  sampler.py  utils.py
src/jax_von_mises/nn/: __init__.py  integration.py
tests/: conftest.py  test_nn_integration.py  test_sampler.py  test_utils.py
